@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:38:12 brook Exp $
+
+R_PKGNAME=	ps
+R_PKGVER=	1.3.0
+CATEGORIES=	sysutils
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	List, query, manipulate system processes
+LICENSE=	modified-bsd
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
